<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Primary"
    android:layout_height="match_parent">
    <View
        android:background="@color/point_button_layer3"
        android:id="@+id/view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </View>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:clickable="false"
        android:paddingVertical="3dp"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/view">


        <LinearLayout
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                />
            <TextView
                android:lineSpacingExtra="3dp"
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="start"
                android:text="@string/status"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textStyle="bold"
                 />

        </LinearLayout>




        <TextView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/withdraw"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>