<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary"
    tools:context=".User_Auth">



        <LinearLayout
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"> <!-- LinearLayout যুক্ত করা -->

            <ImageView


                android:id="@+id/ic"
                android:layout_width="40dp"
                android:layout_height="40dp"

                android:src="@drawable/on2"
                android:importantForAccessibility="no" />

            <TextView
                android:paddingTop="10dp"
                android:gravity="center"
                android:id="@+id/appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
               android:paddingHorizontal="25dp"
                android:text="Start earning points—convert them into BTC!"
                android:textColor="#FFFFFF"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>




    <LinearLayout

        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/choose_login_title"
            android:textColor="@color/go_button_layer3"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
        <TextView
            android:id="@+id/privacy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/privacy"
            android:textColorLink="#00BFFF"
            android:textSize="13sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="16dp" />


        <androidx.cardview.widget.CardView
            app:cardCornerRadius="4dp"
            android:layout_marginHorizontal="60dp"
            android:id="@+id/signin_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="7dp"
            app:cardElevation="5dp">


            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="48dp"

                >

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center_vertical"

                    android:src="@drawable/google" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:text="Sign with Google"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>




        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="16dp"
        android:background="#0DFF0000"
        android:elevation="10dp"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:padding="5dp"
        android:text="@string/note"
        android:textColor="#FF0000"
        android:textSize="13sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>