<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary"
    tools:context=".Claim_History">



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/claim"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/email_Po"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_email"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/Claim_button"
            style="@style/GoButtonStyle"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="0dp"
            android:text="@string/claim"
            android:textAllCaps="true"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/History_button"
            style="@style/GoButtonStyle"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="0dp"
            android:text="@string/history"
            android:textAllCaps="true"
            android:textSize="15sp"
          />
    </LinearLayout>
    <TextView
        android:background="?attr/selectableItemBackground"
        android:id="@+id/policy_text"
        android:textStyle="bold"
        android:textSize="13sp"
        android:textColorLink="#00BFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/privacy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/currency_select"
        android:backgroundTint="@color/point_button_layer1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <TextView
            android:id="@+id/pts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Your Points:"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/currency_select"
            android:gravity="center"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/pts"
            app:layout_constraintTop_toBottomOf="@id/pts">


            <ImageView

                android:src="@drawable/on2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="PTS"
                android:textColor="@color/white"

                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/pts_edit"
            android:maxLines="1"
            android:inputType="number"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="end"
            android:hint="0.00"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/go_button_layer3"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout5"
            app:layout_constraintTop_toTopOf="@+id/linearLayout5" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:background="@drawable/circle"
        android:id="@+id/swap_img"
        android:src="@drawable/baseline_swap_vert_24"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:tint="@color/go_button_layer3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/currency_select"
        android:backgroundTint="@color/point_button_layer1"
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swap_img">

        <TextView
            android:id="@+id/btc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text=" Your're converting"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/currency_select"
            android:gravity="center"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btc"
            app:layout_constraintTop_toBottomOf="@id/btc">


            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/btc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/btc"
                android:textColor="@color/white"

                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/currency_edit"
            android:enabled="false"
            android:maxLines="1"
            android:inputType="number"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="end"
            android:hint="0.00"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/go_button_layer3"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout6"
            app:layout_constraintTop_toTopOf="@+id/linearLayout6" />

        <ProgressBar
            android:id="@+id/progress"
            android:visibility="gone"
            android:layout_marginEnd="16dp"
            android:indeterminateDrawable="@drawable/progress"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="@+id/linearLayout6" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>